--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ body {
     height: 200px;
     border: 1px solid rgba(255, 255, 255, 0.1);
     box-shadow: 8px 8px 15px black;
-    margin-left: 100%;
+    left: calc(25%);
     margin-top: 25%;
 }
 
